<resources>
    <string name="app_name">GCCSL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="loan_types">

        <item>--Select Loan type--</item>

        <item>New Home Loan</item>

        <item>Refinance</item>

        <item>Construction</item>

        <item>Home Improvement</item>
    </string-array>

    <string-array name="product_types">
        <item>Please Select</item>
        <item>Personal Loan</item>
        <item>Home Loan</item>
        <item>Car Loan</item>
        <item>Education Loan</item>
    </string-array>

    <string-array name="account_numbers">
        <item>Please Select</item>
        <item>XXXX1234</item>
        <item>XXXX5678</item>
    </string-array>

    <string-array name="cities">

        <item>Select City</item>

        <item>Delhi</item>

        <item>Mumbai</item>

        <item>Bangalore</item>

        <item>Hyderabad</item>

        <item>Chennai</item>

        <item>Kolkata</item>
    </string-array>

    <string-array name="tw_brands">

        <item>Select TW brand</item>

        <item>Honda</item>

        <item>Hero</item>

        <item>TVS</item>

        <item>Bajaj</item>

        <item>Yamaha</item>

        <item>Royal Enfield</item>
    </string-array>

    <string-array name="purchase_timeline">

        <item>When are you planning to buy?</item>

        <item>Immediately</item>

        <item>Within a month</item>

        <item>Within 3 months</item>

        <item>After 3 months</item>
    </string-array>


    <string-array name="financial_years">

        <item>FY 23-24</item>

        <item>FY 22-23</item>

        <item>FY 21-22</item>

        <item>FY 20-21</item>

        <item>FY 19-20</item>
    </string-array>


    <string name="dashboard">Dashboard</string>
    <string name="passbook">Passbook</string>
    <string name="my_passbook">My Passbook</string>
    <string name="saving_account">Saving Account</string>
    <string name="menu">Menu</string>
    <string name="expand">Expand</string>
    <string name="date">Date</string>
    <string name="dr_cr">Dr/Cr</string>
    <string name="balance">Balance</string>
    <string name="closing_balance">Closing Balance : ₹125.00</string>
    <string name="account_sb000663">Account: SB000663</string>
    <string name="opening_balance">Opening Balance</string>


</resources>